# Content-Creation-Engine-

./: .env.example  .gitignore  Addition 2  Agents  Architecture  Architecture refine  Automation engine  Baby versions  Content engine  Dockerfile  Finalization Sheet  Math sprc  Open Source additions  Pain points  Popular APIs  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
go-gateway/: Dockerfile  README.md  go.mod  main.go
protos/: content_factory.proto
scripts/: build.sh  generate_protos.sh  run.sh
src/: __init__.py  main.py
src/api/: __init__.py  server.py
src/evolution/: __init__.py  evolution.py  models.py
src/hive/: __init__.py  agents.py  hive.py  models.py
src/sentinel/: __init__.py  models.py  sentinel.py
src/services/: __init__.py  audio_service.py  avatar_service.py  brand_dna_service.py  creative_spark_service.py  repurposing_service.py  social_media_service.py  video_service.py
src/static/css/: dashboard.css
src/static/js/: dashboard.js
src/templates/: dashboard.html
src/tools/: BABY_TOOLS_README.md  __init__.py  audio.py  baby_analytics.py  baby_clips.py  baby_design.py  baby_video_editor.py  face.py  image.py  nlp.py  social_media.py  video.py
src/utils/: __init__.py  config.py
tests/: conftest.py  test_audio_service.py  test_avatar_service.py  test_baby_tools.py  test_evolution.py  test_hive.py  test_sentinel.py  test_social_media_service.py  test_tools.py  test_video_service.py
